# smartNote

./: .env  .gitignore  LICENSE  README.md  main.py  main.spec  pyproject.toml  smartNote.spec
.github/workflows/: python-app.yml
assets/: database.db
assets/locales/en/LC_MESSAGES/: lang.po
prisma/: schema.prisma
src/: main.py  settings.py  styles.py
src/apps/pices/: index_view.py
src/apps/pices/widgets/: bulk_modify_files_banner_widget.py
src/core/: boot.py  database.py  functions.py  i18n.py  settings.py  venvs.py  vos.py  widgets.py
src/pages/: dashboard_view.py  index_view.py  login_view.py
src/pages/widgets/: app_bar.py  login_form.py  sub_menu.py  welcome.py
src/prisma_client/: actions.py  bases.py  builder.py  client.py  models.py  schema.prisma  types.py
temp/: REMAD.md
