[tool.poetry]
name = "smart-note"
version = "0.1.0"
description = ""
authors = ["zico"]
readme = "README.md"
packages = [{include = "smart_note"}]

[tool.poetry.dependencies]
python = "^3.8"
flet = "^0.4.2"
pickleDB = "^0.9.2"
pydash = "^6.0.2"
pandas = "^1.5.3"
pydantic = "1.10.2"
requests = "^2.28.2"
pyinstaller = {version = "^5.8.0",  python=">=3.9,<3.12"}
prisma = "^0.8.2"
pillow = "^9.4.0"
arrow = "^1.2.3"

[tool.poetry.dev-dependencies]
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "flet run ./src/main.py -r"